# 3dof_arm_kinematics

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: arm_3dof_kinematics_ci.yml
exe/: fk_publisher_main.cpp  ik_subscriber_main.cpp
include/3dof_arm_kinematics/config/: kinematics.yaml
include/3dof_arm_kinematics/config/urdf/: 3dof_arm.urdf
include/3dof_arm_kinematics/core/: AnalyticalSolver.h  KinematicSolver.h  MiniURDFParser.h  PinocchioSolver.h  Types.h  YamlReader.h
include/3dof_arm_kinematics/ros/: FkPublisherNode.h  IkSubscriberNode.h
include/planar_arm_kinematics/config/: kinematics.yaml
include/planar_arm_kinematics/config/urdf/: planar_arm.urdf
include/planar_arm_kinematics/core/: AnalyticalSolver.h  KinematicSolver.h  Kinematics.h  MiniURDFParser.h  PinocchioSolver.h  RobotModel.h  Types.h  YamlReader.h  custom_solver.h  kinematics.h  pinocchio_solver.h  robot_model.h  types.h  yaml_reader.h
include/planar_arm_kinematics/ros/: FkPublisherNode.h  IkSubscriberNode.h  fk_publisher_node.h  ik_subscriber_node.h
launch/: evaluate_kinematics.launch.py
src/core/: AnalyticalSolver.cpp  Kinematics.cpp  MiniURDFParser.cpp  PinocchioSolver.cpp  custom_solver.cpp  kinematics.cpp  pinocchio_solver.cpp
src/ros/: FkPublisherNode.cpp  IkSubscriberNode.cpp  fk_publisher_node.cpp  ik_subscriber_node.cpp
test/: test_AnalyticalSolver.cpp  test_KinematicSolverSimpleGeneralized.cpp  test_PinocchioSolver.cpp  test_kinematics.cpp
test/mock_robot_configs/congruent/config/: kinematics.yaml
test/mock_robot_configs/congruent/config/urdf/: congruent.urdf
